force-app/main/default/objects/Route__c/fields/Distance_from_Source__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Source__c</fullName>
    <inlineHelpText>In KM</inlineHelpText>
    <label>Distance_from_Source</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>