force-app/main/default/objects/Route__c/fields/Halt_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Halt_Duration_Minutes__c</fullName>
    <label>Halt_Duration_Minutes</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>