force-app/main/default/objects/Route__c/fields/Has_Pantry_Car__c.field-meta.xml
<CustomField>
    <fullName>Has_Pantry_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has_Pantry_Car</label>
    <type>Checkbox</type>
</CustomField>