force-app/main/default/objects/Route__c/fields/Is_Technical_Stop__c.field-meta.xml
<CustomField>
    <fullName>Is_Technical_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Technical_Stop</label>
    <type>Checkbox</type>
</CustomField>