force-app/main/default/objects/Route__c/fields/Platform_Number__c.field-meta.xml
<CustomField>
    <fullName>Platform_Number__c</fullName>
    <label>Platform_Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>