force-app/main/default/objects/Route__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>