force-app/main/default/objects/Route__c/fields/Stop_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stop_Duration__c</fullName>
    <description>Minutes</description>
    <label>Stop_Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>