force-app/main/default/objects/Route__c/fields/Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Stop_Number__c</fullName>
    <label>Stop_Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>